# picko-scripts

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  FOLLOWUPS.md  IMPROVEMENT_CONTENT_PIPELINE.md  INTRODUCTION.md  LICENSE  ONBOARDING.md  README.md  REVIEW_CHECKLIST.md  ROADMAP.md  SECURITY.md  TEST_REPORT.md  USER_GUIDE.md  daily_collector_output.txt  daily_collector_real_output.txt  generate_content_output.txt  health_check_output.txt  implementation_plan.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  task.md
.claude/: settings.local.json
.claude/commands/: speckit.plan.md  speckit.specify.md  speckit.tasks.md
.github/workflows/: auto_collect.yml  docs_management.yml  health_check.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
artifacts/: video_prompt_benchmark.json
cache/embeddings/: 0771e4cf784a84cc.npy  092945ecc8dc9a8a.npy  0f123b566fdd49d7.npy  1313c5b19bd40be2.npy  15c0a71b37530d1e.npy  1909592f4d98f7a7.npy  225e1a05ae1a5c38.npy  241b201cb30f3d6a.npy  2adab2361d25ca76.npy  356877486f03474c.npy  35862689742a123b.npy  3837b5724d73155c.npy  3dc280d15a3f8a3e.npy  423a502d84ce12dc.npy  43d18dbcdad0573c.npy  45007e886df2a146.npy  48e2e8743c6b07ae.npy  500b5d18e2df17a6.npy  51c3c30b59647f80.npy  5334827dbf51e0d4.npy  568c89adbbf01851.npy  56feaca6dc5fd99f.npy  59a2b1d466a4c773.npy  5cd0117f669f7d51.npy  5e4f87bef9fc43db.npy  6296b7d32784adf4.npy  645352fa2a0c26bc.npy  6531160332c36ef8.npy  658a9e5279c38819.npy  6de540204ff49fa9.npy  70a892e798a6628e.npy  72d6852eaad3326d.npy  776ec989e65813ac.npy  79509fd15eb4c39c.npy  7bb1e72f1cade052.npy  7ca514ee9d058930.npy  7ea0e413f5f58b14.npy  8143bf970b331b5d.npy  82f4469c1649dc97.npy  86ce76a1a7b9d09b.npy  (+48 more)
cache/responses/: 00ce92bbb4f45654.json  014210c2b1dd7185.json  0217bdff5c7086f9.json  03eb97b6ff5b3f2c.json  069ddc63444e55a2.json  073a6d690fa6b1fc.json  074b0a3321b2f4ed.json  0e33085cebe65b76.json  0ea9e604807f0b47.json  0f8d9a60a7ed5b7b.json  128677b1afc77a92.json  1503511042569c12.json  15513d0db7336e81.json  181ac83823aeda3d.json  186d8a27450b00a1.json  19174ca1a47ea184.json  1abae991bb07764a.json  1b889bc7a39151f2.json  1b8a1828f23278ee.json  1c578ecfc1ec580c.json  1fc4794a5e96623b.json  20b8551c0654f4bd.json  22dd2445f7501056.json  22f7339e97d96919.json  2576030071d9588d.json  268cb6f9019edb78.json  2783721a77ef4c0f.json  2830771adc256e6e.json  28e336a20414618d.json  2e6def469a097a3f.json  2fdd8dc1dd2f863e.json  32462195c3769395.json  32b891dd3bcff68d.json  32f81a0f7005d206.json  353e50c452b28a2c.json  35af6fc6371f7b0f.json  386ddabcfe104fab.json  390df6ea5a878d31.json  3b31f04b9cf3d0fb.json  3c66771f2e0d7724.json  (+129 more)
config/: collectors.yml  config.yml  video_agents.yml
config/accounts/: dawn_mood_call.yml  socialbuilders.yml
config/benchmarks/: video_prompt_scenarios.yml
config/layouts/: README.md  _defaults.yml
config/workflows/: agentic_pipeline.yml  approved_packs.yml  daily_pipeline.yml  image_generation.yml  twitter_publish.yml  video_agentic_pipeline.yml
docs/: .docs-config.yml  PR-003-auto-collector.md  PRD.md  README.md  changelog.md  collectors.md  data-contracts.md  deployment.md  docs_status_report.md  evaluation_0226.md  improvement-content-pipeline.md  market_analysis.md  monitoring.md  review-checklist.md  roadmap.md  security.md  test-report.md  실전_운영_준비_가이드.md  프로젝트_소개.md
docs/api/: README.md
docs/architecture/: README.md  components.md  data.md  security.md
docs/development/: debugging.md  guidelines.md  setup.md
docs/operations/: deployment.md  monitoring.md
docs/plans/: 2026-02-25-orchestration-layer.md  2026-03-04-picko-web-ui-design.md
docs/specs/: collectors.yml  ui-components.yml  workflows.yml
docs/testing/: strategy.md
docs/ui/: final-share-onepager.md  input-output-artifacts.md  io-first-wireframe-spec.md  mvp-wireframes.md  screen-code-map.md  wireframes-and-flow.md
docs/user/: getting-started.md
docs/video/: model_workflows.md
mock_vault/config/: sources.yml
picko/: __init__.py  __main__.py  account_config_loader.py  account_context.py  account_inferrer.py  config.py  embedding.py  html_renderer.py  layout_config.py  llm_client.py  logger.py  multimedia_io.py  prompt_composer.py  prompt_loader.py  proposal_generator.py  publisher.py  scoring.py  source_manager.py  templates.py  vault_io.py  video_plan.py
scripts/: README.md  __init__.py  archive_manager.py  daily_collector.py  docs_list_generator.py  docs_manager.py  docs_status_checker.py  duplicate_checker.py  engagement_sync.py  explore_topic.py  generate_content.py  health_check.py  migrate_accounts.py  publish_log.py  publish_twitter.py  render_media.py  retry_failed.py  run_daily_collector.ps1  run_workflow.py  scheduler.py  score_calibrator.py  setup_scheduler.ps1  setup_workflow_scheduler.ps1  simple_docs_manager.py  simple_rss_collector.py  source_curator.py  source_discovery.py  style_extractor.py  validate_output.py  video_prompt_benchmark.py
tests/: __init__.py  conftest.py  test_account_config_loader.py  test_account_context.py  test_account_context_yaml.py  test_account_inferrer.py  test_adapter_mastodon.py  test_adapter_reddit.py  test_adapter_threads.py  test_archive_manager.py  test_cli_account.py  test_collector_dedup.py  test_collectors.py  test_config.py  test_config_account_dir.py  test_constraints.py  test_daily_collector.py  test_discovery_gates.py  test_discovery_orchestrator.py  test_duplicate_checker.py  test_e2e_agentic.py  test_e2e_dryrun.py  test_embedding.py  test_engagement_sync.py  test_explore_topic.py  test_generate_content.py  test_generation_validation.py  test_health_check.py  test_html_renderer.py  test_image_templates.py  test_integration.py  test_integration_v2.py  test_layout_config.py  test_llm_client.py  test_logger.py  test_main.py  test_migrate_accounts.py  test_multimedia_io.py  test_notification_bot.py  test_orchestrator_actions.py  (+39 more)
(+221 files in other folders)
